# table-generation-tool

./: README.md  angular.json  package-lock.json  package.json  字段.txt  项目目录结构.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/application_services/: mod.rs
src-tauri/src/application_services/data_query_services/: jdy_api.rs  mod.rs
src-tauri/src/application_services/excel_services/: io_excel_services.rs  mod.rs
src-tauri/src/application_services/jdy_api_services/: jdy_api.rs
src-tauri/src/application_services/query_services/: mod.rs  query_service.rs
src-tauri/src/commands/: io_commands.rs  mod.rs  query_commands.rs
src-tauri/src/model_domain/: io_table_model.rs  mod.rs  query_model.rs
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  shared-data.service.ts
src/app/device-table/: device-table.component.html  device-table.component.scss  device-table.component.ts  数据流说明.md
src/app/device-table/select-device/: select-device.component.html  select-device.component.scss  select-device.component.ts
src/app/equipment-modal/: equipment-modal.component.ts
src/app/home/: home.component.html  home.component.scss  home.component.ts
src/app/home/device-list/: device-list.component.html  device-list.component.ts  device-listcomponent.scss
src/app/home/station-list/: station-list.component.ts
src/app/models/: device-table.model.ts  equipment.model.ts  project.model.ts
src/app/services/: api.service.ts  device-table.service.ts  equipment-state.service.ts  index.ts  io-table.service.ts  project-state.service.ts
src/app/station-list/: station-list.component.html  station-list.component.scss  station-list.component.ts
src/home/: home.component.html  home.component.scss  home.component.ts
