[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"  # JSON数据的序列化和反序列化库
serde = { version = "1.0", features = ["derive"] }  # 通用数据序列化/反序列化框架，derive特性允许自动实现序列化特性
log = "0.4"  # 轻量级日志记录API，提供统一的日志接口
tauri = { version = "2.5.0", features = [] } # 构建跨平台桌面应用的核心框架
tauri-plugin-log = "2.0.0-rc"  # Tauri的日志插件，为应用提供日志功能
tauri-plugin-shell = "2.0.0"  # 提供shell命令执行功能
tauri-plugin-fs = "2.0.0"  # 文件系统访问插件
tauri-plugin-os = "2.0.0"  # 操作系统信息访问插件
tauri-plugin-process = "2.0.0"  # 进程管理插件
tauri-plugin-dialog = "2.0.0"  # 对话框插件
reqwest = { version = "0.12.15", features = ["json"] }  # HTTP客户端库，支持异步请求和JSON处理
anyhow = "1.0"  # 简化错误处理的库，提供统一的错误类型
umya-spreadsheet = "2.3.0" # 处理excel
once_cell = "1.21.3"
thiserror = "2.0.12"
tempfile = "3.8.1"  # 安全管理临时文件
defer = "0.1.0"  # 提供延迟执行功能，类似Go语言的defer
